# Simplex

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  Simplex.cpp  Simplex.vs2012.sln  Simplex.vs2013.sln  Tests.txt
Simplex/: ReadMe.txt  Simplex.cpp  Simplex.vs2012.vcxproj  Simplex.vs2012.vcxproj.filters  Simplex.vs2013.vcxproj  Simplex.vs2013.vcxproj.filters
Simplex.vs2013/: ReadMe.txt  Simplex.vs2013.vcxproj  stdafx.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  simplex.cpp
src/prog/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/simplex-tests/: CMakeLists.txt  simplex-tests.cpp  simplex-tests.h
